--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "chalk": "^4.1.1",
+    "esbuild-plugin-postcss2": "^0.0.9",
     "gulp": "^4.0.2",
     "gulp-esbuild": "^0.7.7",
-    "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-twig2html": "^2.2.0",
     "lodash": "^4.17.21",
