--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gulp-vite",
   "type": "module",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Use vite as dev server with gulp",
   "main": "index.cjs.js",
-  "module": "index.js",
+  "module": "index.mjs",
   "author": "evromalarkey",
   "license": "MIT",
   "scripts": {
@@ -26,12 +26,11 @@
     "postcss-nesting": "^8.0.1"
   },
   "files": [
-    "index.js",
-    "index.cjs.js"
+    "index.mjs"
   ],
   "exports": {
     ".": {
-      "import": "./index.js",
+      "import": "./index.mjs",
       "require": "./index.cjs.js"
     }
   },
