--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "gulp-vite",
   "type": "module",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "Use vite as dev server with gulp",
   "main": "index.cjs.js",
   "module": "index.mjs",
   "author": "evromalarkey",
   "license": "MIT",
   "scripts": {
-    "build": "rollup index.js --file index.cjs.js --format cjs --exports default"
+    "build": "rollup index.mjs --file index.cjs.js --format cjs --exports default"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
     "chalk": "^4.1.1",
-    "vite": "^2.3.3"
+    "lodash": "^4.17.21",
+    "vite": "^2.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "esbuild-plugin-postcss2": "^0.0.9",
     "gulp": "^4.0.2",
-    "gulp-esbuild": "^0.7.7",
+    "gulp-esbuild": "^0.8.0",
     "gulp-rename": "^2.0.0",
     "gulp-twig2html": "^2.2.0",
     "postcss-import": "^14.0.2",
