--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
   "description": "Use vite as dev server with gulp",
   "main": "index.cjs.js",
   "module": "index.mjs",
-  "author": "evromalarkey",
+  "author": "lubomirblazekcz",
   "license": "MIT",
   "scripts": {
     "build": "rollup index.mjs --file index.cjs.js --format cjs --exports default"
   },
   "dependencies": {
-    "chalk": "^4.1.1",
+    "chalk": "^5.0.0",
     "lodash": "^4.17.21",
-    "vite": "^2.3.4"
+    "vite": "^2.7.13"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "esbuild-plugin-postcss2": "^0.0.9",
+    "autoprefixer": "^10.4.2",
+    "esbuild-plugin-postcss2": "^0.1.1",
     "gulp": "^4.0.2",
-    "gulp-esbuild": "^0.8.0",
+    "gulp-esbuild": "^0.10.0",
     "gulp-rename": "^2.0.0",
     "gulp-twig2html": "^2.2.0",
     "postcss-import": "^14.0.2",
-    "postcss-nesting": "^8.0.1"
+    "postcss-nesting": "^10.1.2"
   },
   "files": [
     "index.mjs"
@@ -39,6 +39,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/evromalarkey/gulp-vite.git"
+    "url": "git+https://github.com/lubomirblazekcz/gulp-vite.git"
   }
 }
