--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "gulp-vite",
   "type": "module",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Use vite as dev server with gulp",
   "main": "index.cjs.js",
   "module": "index.mjs",
   "author": "lubomirblazekcz",
   "license": "MIT",
   "scripts": {
-    "build": "rollup index.mjs --file index.cjs.js --format cjs --exports default"
+    "build": "rollup index.mjs --file index.cjs.js --format cjs --exports default",
+    "eslint": "npx eslint './*.{js,mjs}' --fix"
   },
   "dependencies": {
     "chalk": "^5.0.0",
@@ -23,7 +24,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-twig2html": "^2.2.0",
     "postcss-import": "^14.0.2",
-    "postcss-nesting": "^10.1.2"
+    "postcss-nesting": "^10.1.2",
+    "eslint-config-standard": "^16.0.3"
   },
   "files": [
     "index.mjs"
