--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gulp-twig2html": "^2.2.0",
     "postcss-import": "^14.0.2",
     "postcss-nesting": "^10.1.2",
-    "eslint-config-standard": "^16.0.3"
+    "eslint-config-standard": "^16.0.3",
+    "tailwindcss": "^3.0.16"
   },
   "files": [
     "index.mjs"
